--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -11,7 +11,7 @@
 {% endblock %}
 
 
-{% block foooter %}
+{% block footer %}
     <footer class="py-4 bg-secondary">
         <div class="container">
             <p class="m-0 text-center text-white ">Copyright &copy; LuxeStore Python 2024</p>
