--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -22,7 +22,7 @@
     <header>
         <nav class="navbar navbar-expand-lg  " data-bs-theme="dark">
             <div class="container">
-                <a class="navbar-brand  fw-bold text-secondary" href="index.html">Store</a>
+                <a class="navbar-brand  fw-bold text-secondary" href="{% url 'main:index' %}">Store</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
