--- a/goods/templates/goods/catalog.html
+++ b/goods/templates/goods/catalog.html
@@ -65,262 +65,22 @@
             </div>
         </div>
         <!-- Product card  -->
-        <div class="col-lg-4 col-md-6 p-4">
-            <div class="card border-primary rounded custom-shadow">
-                <img src="{% static 'deps/images/goods/ipad-case2.jpg' %}" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <a href="#">
-                        <p class="card-title">Ipad Case</p>
-                    </a>
-                    <p class="card-text text-truncate">
-                    Introducing the sleek and functional iPad case, designed to provide both style and protection for your device.
-                    </p>
-                    <p class="product_id">id: 02265</p>
-                    <div class="d-flex justify-content-between">
-                        <p><s>100</s> $</p>
-                        <p><strong>90.00 $</strong></p>
-                        <span class="badge bg-warning text-dark">Discount 10.00 %</span>
-                        <!-- <p><strong>100.00 $</strong></p> -->
-                        <a href="#" class="btn add-to-cart">
-                            <img class="mx-1" src="{% static 'deps/icons/cart-plus.svg' %}" alt="Catalog Icon"
-                                width="32" height="32">
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Product card  -->
-        <div class="col-lg-4 col-md-6 p-4">
-            <div class="card border-primary rounded custom-shadow">
-                <img src="{% static 'deps/images/goods/bag-1.jpg' %}" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <a href="#">
-                        <p class="card-title">Girl's super bag</p>
-                    </a>
-                    <p class="card-text text-truncate">The stylish and versatile bag designed to meet all your needs.
-                    </p>
-                    <p class="product_id">id: 02265</p>
-                    <div class="d-flex justify-content-between">
-                        <p><s>100</s> $</p>
-                        <p><strong>90.00 $</strong></p>
-                        <span class="badge bg-warning text-dark">Discount 10.00 %</span>
-                        <!-- <p><strong>100.00 $</strong></p> -->
-                        <a href="#" class="btn">
-                            <img class="mx-1" src="{% static 'deps/icons/cart-plus.svg' %}" alt="Catalog Icon"
-                                width="32" height="32">
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
 
-        <!-- Product card  -->
-        <div class="col-lg-4 col-md-6 p-4">
-            <div class="card border-primary rounded custom-shadow">
-                <img src="{% static 'deps/images/goods/bag-3.jpg' %}" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <a href="#">
-                        <p class="card-title">"Blush Blossom" Pink Bag</p>
-                    </a>
-                    <p class="card-text text-truncate">Elevate your style with our chic pink bag,
-                    a sophisticated accessory that adds a touch of glamour to any outfit.  </p>
-                    <p class="product_id">id: 02265</p>
-                    <div class="d-flex justify-content-between">
-                        <p><s>100</s> $</p>
-                        <p><strong>90.00 $</strong></p>
-                        <span class="badge bg-warning text-dark">Discount 10.00 %</span>
-                        <!-- <p><strong>100.00 $</strong></p> -->
-                        <a href="#" class="btn">
-                            <img class="mx-1" src="{% static 'deps/icons/cart-plus.svg' %}" alt="Catalog Icon"
-                                width="32" height="32">
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <!-- Product card  -->
-        <div class="col-lg-4 col-md-6 p-4">
-            <div class="card border-primary rounded custom-shadow">
-                <img src="{% static 'deps/images/goods/shoes-1.jpg' %}" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <a href="#">
-                        <p class="card-title">Shoes</p>
-                    </a>
-                    <p class="card-text text-truncate">White Shoes for Girls:
-                    Crafted with care from pristine white materials, these shoes are pure elegance. </p>
-                    <p class="product_id">id: 02265</p>
-                    <div class="d-flex justify-content-between">
-                        <p><s>100</s> $</p>
-                        <p><strong>90.00 $</strong></p>
-                        <span class="badge bg-warning text-dark">Discount 10.00 %</span>
-                        <!-- <p><strong>100.00 $</strong></p> -->
-                        <a href="#" class="btn">
-                            <img class="mx-1" src="{% static 'deps/icons/cart-plus.svg' %}" alt="Catalog Icon"
-                                width="32" height="32">
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Product card  -->
-        <div class="col-lg-4 col-md-6 p-4">
-            <div class="card border-primary rounded custom-shadow">
-                <img src="{% static 'deps/images/goods/bag-2.jpg' %}" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <a href="#">
-                        <p class="card-title">White bag</p>
-                    </a>
-                    <p class="card-text text-truncate">This chic accessory embodies sophistication and versatility.
-                    </p>
-                    <p class="product_id">id: 02265</p>
-                    <div class="d-flex justify-content-between">
-                        <p><s>100</s> $</p>
-                        <p><strong>90.00 $</strong></p>
-                        <span class="badge bg-warning text-dark">Discount 10.00 %</span>
-                        <!-- <p><strong>100.00 $</strong></p> -->
-                        <a href="#" class="btn">
-                            <img class="mx-1" src="{% static 'deps/icons/cart-plus.svg' %}" alt="Catalog Icon"
-                                width="32" height="32">
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Product card  -->
-        <div class="col-lg-4 col-md-6 p-4">
-            <div class="card border-primary rounded custom-shadow">
-                <img src="{% static 'deps/images/goods/shoes-2.jpg' %}" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <a href="#">
-                        <p class="card-title">"Swan Fluff" - shoes</p>
-                    </a>
-                    <p class="card-text text-truncate">"Swan Fluff" - adorable little shoes for girls:
-                    These delicate shoes boast an elegant design and an appealing look.
-                     </p>
-                    <p class="product_id">id: 02265</p>
-                    <div class="d-flex justify-content-between">
-                        <p><s>100</s> $</p>
-                        <p><strong>90.00 $</strong></p>
-                        <span class="badge bg-warning text-dark">Discount 10.00 %</span>
-                        <!-- <p><strong>100.00 $</strong></p> -->
-                        <a href="#" class="btn">
-                            <img class="mx-1" src="{% static 'deps/icons/cart-plus.svg' %}" alt="Catalog Icon"
-                                width="32" height="32">
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Product card  -->
-        <div class="col-lg-4 col-md-6 p-4">
-            <div class="card border-primary rounded custom-shadow">
-                <img src="{% static 'deps/images/goods/glass1.jpg' %}" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <a href="#">
-                        <p class="card-title">"Crystal Clear" Glasses</p>
-                    </a>
-                    <p class="card-text text-truncate">These stylish glasses are both chic and practical. </p>
-                    <p class="product_id">id: 02265</p>
-                    <div class="d-flex justify-content-between">
-                        <p><s>100</s> $</p>
-                        <p><strong>90.00 $</strong></p>
-                        <span class="badge bg-warning text-dark">Discount 10.00 %</span>
-                        <!-- <p><strong>100.00 $</strong></p> -->
-                        <a href="#" class="btn">
-                            <img class="mx-1" src="{% static 'deps/icons/cart-plus.svg' %}" alt="Catalog Icon"
-                                width="32" height="32">
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Product card  -->
-        <div class="col-lg-4 col-md-6 p-4">
-            <div class="card border-primary rounded custom-shadow">
-                <img src="{% static 'deps/images/goods/dress2.jpg' %}" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <a href="#">
-                        <p class="card-title">"Pink Serenade" Dress</p>
-                    </a>
-                    <p class="card-text text-truncate">This enchanting dress is a symphony of elegance and charm.
-                    </p>
-                    <p class="product_id">id: 02265</p>
-                    <div class="d-flex justify-content-between">
-                        <p><s>100</s> $</p>
-                        <p><strong>90.00 $</strong></p>
-                        <span class="badge bg-warning text-dark">Discount 10.00 %</span>
-                        <!-- <p><strong>100.00 $</strong></p> -->
-                        <a href="#" class="btn">
-                            <img class="mx-1" src="{% static 'deps/icons/cart-plus.svg' %}" alt="Catalog Icon"
-                                width="32" height="32">
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Product card  -->
-        <div class="col-lg-4 col-md-6 p-4">
-            <div class="card border-primary rounded custom-shadow">
-                <img src="{% static 'deps/images/goods/glass2.jpg' %}" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <a href="#">
-                        <p class="card-title">Black-glass</p>
-                    </a>
-                    <p class="card-text text-truncate">These sophisticated glasses exude timeless style and versatility.
-                    </p>
-                    <p class="product_id">id: 02265</p>
-                    <div class="d-flex justify-content-between">
-                        <p><s>100</s> $</p>
-                        <p><strong>90.00 $</strong></p>
-                        <span class="badge bg-warning text-dark">Discount 10.00 %</span>
-                        <!-- <p><strong>100.00 $</strong></p> -->
-                        <a href="#" class="btn">
-                            <img class="mx-1" src="{% static 'deps/icons/cart-plus.svg' %}" alt="Catalog Icon"
-                                width="32" height="32">
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Product card -->
-        <div class="col-lg-4 col-md-6 p-4">
-            <div class="card border-primary rounded custom-shadow">
-                <img src="{% static 'deps/images/goods/dress3.jpg' %}" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <a href="#">
-                        <p class="card-title">White-dress</p>
-                    </a>
-                    <p class="card-text text-truncate">This stunning white dress embodies elegance and grace. </p>
-                    <p class="product_id">id: 02265</p>
-                    <div class="d-flex justify-content-between">
-                        <p><s>100</s> $</p>
-                        <p><strong>90.00 $</strong></p>
-                        <span class="badge bg-warning text-dark">Discount 10.00 %</span>
-                        <!-- <p><strong>100.00 $</strong></p> -->
-                        <a href="#" class="btn">
-                            <img class="mx-1" src="{% static 'deps/icons/cart-plus.svg' %}" alt="Catalog Icon"
-                                width="32" height="32">
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Product card  -->
+    {% for product in goods %}
         <div class="col-lg-4 col-md-6 p-4">
             <div class="card border-primary rounded custom-shadow">
                 <img src="{% static 'deps/images/goods/ipad-case1.jpg' %}" class="card-img-top" alt="...">
                 <div class="card-body">
                     <a href="#">
-                        <p class="card-title">Green phone case</p>
+                        <p class="card-title">{{ product.name }}</p>
                     </a>
-                    <p class="card-text text-truncate">Elevate your phone's style with our vibrant green case. </p>
+                    <p class="card-text text-truncate">{{ product.description }}</p>
                     <p class="product_id">id: 02265</p>
                     <div class="d-flex justify-content-between">
                         <p><s>100</s> $</p>
                         <p><strong>90.00 $</strong></p>
                         <span class="badge bg-warning text-dark">Discount 10.00 %</span>
-                        <!-- <p><strong>100.00 $</strong></p> -->
+                        <p><strong>{{ product.price }} $</strong></p>
                         <a href="#" class="btn">
                             <img class="mx-1" src="{% static 'deps/icons/cart-plus.svg' %}" alt="Catalog Icon"
                                 width="32" height="32">
@@ -329,7 +89,7 @@
                 </div>
             </div>
         </div>
-
+    {% endfor %}
     </div>
     <!-- Pagination -->
     <nav aria-label="Page navigation example">
