--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -56,7 +56,7 @@
                                 <li><a class="dropdown-item  text-white" href="carts/cart.html">Cart</a></li>
                                 <li><a class="dropdown-item  text-white" href="users/profile.html">Personal Area</a>
                                 </li>
-                                <li><a class="dropdown-item  text-white" href="#">Admin Panel</a></li>
+                                <li><a class="dropdown-item  text-white" href="{% url 'admin:index' %}">Admin Panel</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
@@ -85,13 +85,10 @@
                             height="16">
                     </button>
                     <ul class="dropdown-menu bg-secondary" data-bs-theme="dark">
-                        <li><a class="dropdown-item text-white" href="{% url 'catalog:index' %}">All products</a></li>
-                        <li><a class="dropdown-item text-white" href="{% url 'catalog:index' %}">Clothing & Apparel</a></li>
-                        <li><a class="dropdown-item text-white" href="{% url 'catalog:index' %}">Glasses</a></li>
-                        <li><a class="dropdown-item text-white" href="{% url 'catalog:index' %}">Bags</a></li>
-                        <li><a class="dropdown-item text-white" href="{% url 'catalog:index' %}">PhoneCases & IpadCases</a></li>
-                        <li><a class="dropdown-item text-white" href="{% url 'catalog:index' %}">Shoes</a></li>
-                        <li><a class="dropdown-item text-white" href="{% url 'catalog:index' %}">Office Supplies & Decor</a></li>
+                        {% for category in categories %}
+                            <li><a class="dropdown-item text-white" href="{% url 'catalog:index' %}">{{ category.name }}</a></li>
+                        {% endfor %}
+
                     </ul>
                 </div>
                 <!-- Cart icon, opens a modal window -->
