Added media file

--- a/goods/templates/goods/catalog.html
+++ b/goods/templates/goods/catalog.html
@@ -40,47 +40,31 @@
                 <button type="submit" class="btn btn-primary mx-3 mt-3">Apply</button>
             </form>
         </div>
-        <!-- Product card -->
-        <div class="col-lg-4 col-md-6 p-4">
-            <div class="card border-primary rounded custom-shadow">
-                <img src="{% static 'deps/images/goods/dress1.jpg' %}" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <a href="{% url 'goods:product' %}">
-                        <p class="card-title">T-Shirt</p>
-                    </a>
-                    <p class="card-text text-truncate">A white T-shirt is a classic wardrobe essential, offering comfort and versatility.
-                    </p>
-                    <p class="product_id">id: 02265</p>
-                    <div class="d-flex justify-content-between">
-                        <p><s>100</s> $</p>
-                        <p><strong>90.00 $</strong></p>
-                        <span class="badge bg-warning text-dark">Discount 10.00 %</span>
-                        <!-- <p><strong>100.00 $</strong></p> -->
-                        <a href="#" class="btn add-to-cart">
-                            <img class="mx-1" src="{% static 'deps/icons/cart-plus.svg' %}" alt="Catalog Icon"
-                                width="32" height="32">
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
+
         <!-- Product card  -->
 
     {% for product in goods %}
         <div class="col-lg-4 col-md-6 p-4">
             <div class="card border-primary rounded custom-shadow">
-                <img src="{% static 'deps/images/goods/ipad-case1.jpg' %}" class="card-img-top" alt="...">
+            {% if product.images %}
+                <img src="{{product.image.url }}" class="card-img-top" alt="...">
+            {% else %}
+                <img src="{% static "deps/images/Not found image.png" %}" class="card-img-top" alt="{{ product.name  }}">
+            {% endif %}
                 <div class="card-body">
                     <a href="#">
                         <p class="card-title">{{ product.name }}</p>
                     </a>
                     <p class="card-text text-truncate">{{ product.description }}</p>
-                    <p class="product_id">id: 02265</p>
+                    <p class="product_id">{{product.display_id}}</p>
                     <div class="d-flex justify-content-between">
-                        <p><s>100</s> $</p>
-                        <p><strong>90.00 $</strong></p>
-                        <span class="badge bg-warning text-dark">Discount 10.00 %</span>
+                    {% if product.discount %}
+                        <p><s>{{ product.price }}</s> $</p>
+                        <p><strong>{{ product.sell_price }} $</strong></p>
+                        <span class="badge bg-warning text-dark">Discount {{product.discount}} %</span>
+                    {% else %}
                         <p><strong>{{ product.price }} $</strong></p>
+                    {% endif %}
                         <a href="#" class="btn">
                             <img class="mx-1" src="{% static 'deps/icons/cart-plus.svg' %}" alt="Catalog Icon"
                                 width="32" height="32">
