--- a/goods/templates/goods/product.html
+++ b/goods/templates/goods/product.html
@@ -7,7 +7,7 @@
             <div class="row">
                 <!-- Miniatures -->
                 <div class="col-md-4">
-                    <img src="../deps/images/goods/set of tea table and three chairs.jpg"
+                    <img src="{% static 'dress1.jpg' %}"
                         class="img-thumbnail" data-bs-toggle="modal" data-bs-target="#imageModal1">
                 </div>
                 <div class="col-md-4 ">
