--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -86,7 +86,7 @@
                     </button>
                     <ul class="dropdown-menu bg-secondary" data-bs-theme="dark">
                         {% for category in categories %}
-                            <li><a class="dropdown-item text-white" href="{% url 'catalog:index' %}">{{ category.name }}</a></li>
+                            <li><a class="dropdown-item text-white" href="{% url "catalog:index" %}">{{category.name}}</a></li>
                         {% endfor %}
 
                     </ul>
