--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -82,15 +82,14 @@
                     <button class="btn btn-secondary dropdown-toggle btn-secondary" type="button" data-bs-toggle="dropdown"
                         aria-expanded="false">
                         Category
-                        <img class="mx-1" src="{% static 'deps/icons/grid-fill.svg' %}" alt="Catalog Icon" width="16"
-                            height="16">
+                        <img class="mx-1" src="{% static "deps/icons/grid-fill.svg" %}" alt="Catalog Icon" width="16"
+                             height="16">
                     </button>
                     <ul class="dropdown-menu bg-secondary" data-bs-theme="dark">
-                        {% tag_categories as categories %}
-                        {% for category in categories %}
-                            <li><a class="dropdown-item text-white" href="{% url "catalog:index" %}">{{category.name}}</a></li>
-                        {% endfor %}
-
+                        {% tag_categories as categories  %}
+                            {% for category in categories %}
+                                <li><a class="dropdown-item text-white" href="{% url "catalog:index" category.slug %}">{{category.name}}</a></li>
+                            {% endfor %}
                     </ul>
                 </div>
                 <!-- Cart icon, opens a modal window -->
@@ -142,8 +141,8 @@
                                                     <div class="col p-0"><strong>100.00 $</strong></div>
                                                     <div class="col p-0">
                                                         <a href="#" class="remove-from-cart" data-cart-id="">
-                                                            <img class="mx-1" src="deps/icons/trash3-fill.svg"
-                                                                alt="Catalog Icon" width="16" height="16">
+<!--                                                             <img class="mx-1" src="deps/icons/trash3-fill.svg" -->
+<!--                                                                 alt="Catalog Icon" width="16" height="16"> -->
                                                         </a>
                                                     </div>
                                                 </div>
