Done with pagination

--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -3,7 +3,7 @@
 
 
 {% block css %}
-    <link rel="stylesheet" href="deps/css/my_footer_css.css">
+    <link rel="stylesheet" href="{% static 'deps/css/my_footer_css.css' %}">
 {% endblock %}
 
 {% block content %}
