--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -65,8 +65,8 @@
                             </ul>
                         </li>
                     </ul>
-                    <form class="d-flex" role="search">
-                        <input class="form-control me-2 bg-transparent" type="search" placeholder="Search" aria-label="Search">
+                    <form class="d-flex" role="search" action="{% url 'catalog:search' %}" method="get" >
+                        <input class="form-control me-2 bg-transparent" type="search" name = "q"  placeholder="Search" aria-label="Search">
                         <button class="btn btn-outline-dark text-secondary " type="submit">Search</button>
                     </form>
                 </div>
