--- a/goods/templates/goods/catalog.html
+++ b/goods/templates/goods/catalog.html
@@ -48,7 +48,13 @@
         </div>
 
         <!-- Product card  -->
-
+    {% if request.GET.q %}
+    <h3 class="mt-4">Search results {{ request.GET.q }}</h3>
+    {% if not goods %}
+        <link rel="stylesheet" href="{% static "deps/css/my_footer_css.css" %}">
+        <h2 class="mt-4">Not found</h2>
+    {% endif %}
+    {% endif %}
     {% for product in goods %}
         <div class="col-lg-4 col-md-6 p-4">
             <div class="card border-primary rounded custom-shadow">
@@ -59,9 +65,24 @@
             {% endif %}
                 <div class="card-body">
                     <a href="{% url 'catalog:product' product.slug %}">
-                        <p class="card-title text-dark">{{ product.name }}</p>
+                        <p class="card-title text-dark">
+                        {% autoescape off %}
+                            {% if product.headline %}
+                                {{ product.headline }}
+                            {% else %}
+                                {{ product.name }}
+                            {% endif %}
+                        {% endautoescape %}
+                        </p>
                     </a>
-                    <p class="card-text ">{{ product.description|truncatechars:35 }}</p>
+                    <p class="card-text ">
+                    {% autoescape off %}
+                        {% if product.bodyline %}
+                            {{ product.bodyline |truncatechars:100 }}
+                        {% else %}
+                            {{ product.description|truncatechars:100 }}
+                        {% endif %}
+                    {% endautoescape %}
                     <p class="product_id">{{product.display_id}}</p>
                     <div class="d-flex justify-content-between">
                     {% if product.discount %}
@@ -82,27 +103,30 @@
     {% endfor %}
     </div>
     <!-- Pagination -->
-    <nav aria-label="Page navigation example">
-        <ul class="pagination justify-content-center my-4">
-            <div class="custom-shadow d-flex">
-                <li class="page-item  {% if not goods.has_previous %} disabled {% endif %}">
-                  <a class="page-link" href="{% if goods.has_previous %}?{% change_params page=goods.previous_page_number %}{% else %}#{% endif %}">Previous</a>
-                </li>
-                {% for page in goods.paginator.page_range %}
-                {% if page >= goods.number|add:-2 and page <= goods.number|add:2 %}
-                    <li class="page-item {% if goods.number == page %} active {% endif %} ">
-                        <a class="page-link" href="?{% change_params page=page %}">{{page}}</a>
+    {% if goods %}
+        <nav aria-label="Page navigation example">
+            <ul class="pagination justify-content-center my-4">
+                <div class="custom-shadow d-flex">
+                    <li class="page-item  {% if not goods.has_previous %} disabled {% endif %}">
+                      <a class="page-link" href="{% if goods.has_previous %}?{% change_params page=goods.previous_page_number %}{% else %}#{% endif %}">Previous</a>
                     </li>
-                {% endif %}
-                {% endfor %}
+                    {% for page in goods.paginator.page_range %}
+                    {% if page >= goods.number|add:-2 and page <= goods.number|add:2 %}
+                        <li class="page-item {% if goods.number == page %} active {% endif %} ">
+                            <a class="page-link" href="?{% change_params page=page %}">{{page}}</a>
+                        </li>
 
-                <li class="page-item {% if not goods.has_next %} disabled {% endif %} ">
-                  <a class="page-link " href="{% if goods.has_next %}?{% change_params page=goods.next_page_number %}
-                  {% else %}#{% endif %}">Next</a>
-                </li>
-            </div>
-        </ul>
-    </nav>
+                    {% endif %}
+                    {% endfor %}
+
+                    <li class="page-item {% if not goods.has_next %} disabled {% endif %} ">
+                      <a class="page-link " href="{% if goods.has_next %}?{% change_params page=goods.next_page_number %}
+                      {% else %}#{% endif %}">Next</a>
+                    </li>
+                </div>
+            </ul>
+        </nav>
+    {% endif %}
 {% endblock %}
 
 {% block footer %}
