--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,40 +1,69 @@
 {% extends "base.html" %}
 {% load static %}
 
-
 {% block content %}
     <div class="row">
         <div class="container mt-5">
             <div class="row justify-content-center">
                 <div class="col-md-6 bg-white p-4 mb-4 mx-3 rounded custom-shadow">
                     <h2 class="text-center mb-4">Authentication</h2>
-                    <form>
+                    <form action="{% url 'user:login' %}" method="post" >
+                        {% csrf_token %}
                         <div class="mb-3">
                             <label for="username" class="form-label">Name</label>
-                            <input type="text" class="form-control" id="username" placeholder="Enter your name" required>
+                            <input type="text" class="form-control" value="{% if form.username.value %}{{form.username.value}}{% endif %}" id="username" placeholder="Enter your name" required>
                         </div>
                         <div class="mb-3">
                             <label for="password" class="form-label">Password</label>
                             <input type="password" class="form-control" id="password" placeholder="Enter your password" required>
                         </div>
+
+                    {% comment %} {% for item in form %}
+                    <div class="mb-3">
+                        <label for="{{ item.id_for_label }}" class="form-label">{{ item.label }}</label>
+                        {{item}}
+                    </div>
+                    {% endfor %} {% endcomment %}
+
+
+                    {% comment %} <div class="mb-3">
+                        <label for="{{ form.username.id_for_label }}" class="form-label">Username</label>
+                        {{form.username}}
+                    </div>
+                    <div class="mb-3">
+                        <label for="password" class="form-label">Password</label>
+                        {{ form.password }}
+                    </div> {% endcomment %}
+
+
+                    {% comment %} <div class="mb-3">
+                        <label for="username" class="form-label">Username</label>
+                        <input type="text" class="form-control" id="username" placeholder="Enter your username" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="password" class="form-label">Password</label>
+                        <input type="password" class="form-control" id="password" placeholder="Enter your password" required>
+                    </div>
+                    </div> {%endcomment%}
+
                         <button type="submit" class="btn btn-secondary btn-block">Login</button>
                     </form>
                     <div class="mt-3">
-                        <a href="#">Forget password?</a> | <a href="registration.html">Create account</a>
+                        <a href="#">Forget password?</a> | <a href="{% url 'user:registration' %}">Create account</a>
                     </div>
                     <hr>
                     <div class="text-center">
                         <p>Or authenticate through:</p>
                         <a href="#" class="btn btn-secondary">
-                            <img class="mx-1" src="../deps/icons/google.svg" alt="Catalog Icon" width="16" height="16">
+                            <img class="mx-1" src="{% static 'deps/icons/google.svg' %}" alt="Catalog Icon" width="16" height="16">
                             Google
                         </a>
                         <a href="#" class="btn btn-secondary">
-                            <img class="mx-1" src="../deps/icons/facebook.svg" alt="Catalog Icon" width="16" height="16">
+                            <img class="mx-1" src="{% static 'deps/icons/facebook.svg' %}" alt="Catalog Icon" width="16" height="16">
                             Facebook
                         </a>
                         <a href="#" class="btn btn-secondary">
-                            <img class="mx-1" src="../deps/icons/github.svg" alt="Catalog Icon" width="16" height="16">
+                            <img class="mx-1" src="{% static 'deps/icons/github.svg' %}" alt="Catalog Icon" width="16" height="16">
                             GitHub
                         </a>
                     </div>
@@ -42,4 +71,5 @@
             </div>
         </div>
     </div>
-{% enblock %}
+{% endblock %}
+
