--- a/templates/base.html
+++ b/templates/base.html
@@ -45,25 +45,32 @@
                         <li class="nav-item">
                             <a class="nav-link  fw-bold text-secondary" href="carts/cart.html">Cart</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link  fw-bold text-secondary" href="{% url 'user:login' %}">Login</a>
-                        </li>
-                        <li class="nav-item dropdown ">
-                            <a class="nav-link dropdown-toggle fw-bold text-secondary" href="#" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">
-                                My profile
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item  text-white" href="carts/cart.html">Cart</a></li>
-                                <li><a class="dropdown-item  text-white" href="{% url 'user:profile' %}">Personal Area</a>
-                                </li>
-                                <li><a class="dropdown-item  text-white" href="{% url 'admin:index' %}">Admin Panel</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item  text-white" href="{% url 'user:logout' %}">Logout</a></li>
-                            </ul>
-                        </li>
+
+                        {% if not user.is_authenticated%}
+                            <li class="nav-item">
+                                <a class="nav-link  fw-bold text-secondary" href="{% url 'user:login' %}">Login</a>
+                            </li>
+                        {% else %}
+                            <li class="nav-item dropdown ">
+                                <a class="nav-link dropdown-toggle fw-bold text-secondary" href="{% url 'user:profile' %}" role="button"
+                                    data-bs-toggle="dropdown" aria-expanded="false">
+                                    My profile
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item  text-white" href="carts/cart.html">Cart</a></li>
+                                    <li><a class="dropdown-item  text-white" href="{% url 'user:profile' %}">Personal Area</a>
+                                    </li>
+                                    {% if user.is_admin or user.is_staff %}
+                                        <li><a class="dropdown-item  text-white" href="{% url 'admin:index' %}">Admin Panel</a></li>
+                                    {% endif %}
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li><a class="dropdown-item  text-white" href="{% url 'user:logout' %}">Logout</a></li>
+                                </ul>
+                            </li>
+                        {% endif %}
+
                     </ul>
                     <form class="d-flex" role="search" action="{% url 'catalog:search' %}" method="get" >
                         <input class="form-control me-2 bg-transparent" type="search" name = "q"  placeholder="Search" aria-label="Search">
